# spice-kernel-db

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
Plans/: 2026-05-12-redteam-findings.md
conda/: meta.yaml
docs/: _quarto.yml  api.qmd  cli.qmd  coverage.qmd  custom.scss  design.qmd  index.qmd  motivation.qmd  review.qmd  troubleshooting.qmd  tutorial-mission-discovery.ipynb  usage.qmd
src/spice_kernel_db/: __init__.py  cli.py  config.py  coverage.py  db.py  hashing.py  mission_registry.toml  parser.py  planetarypy_bridge.py  registry.py  remote.py
tests/: test_kernel_db.py
tests/fixtures/: mission_registry_min.toml
