[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spice-kernel-db"
version = "0.7.1"
description = "Browse, get, and manage SPICE kernels and metakernels across NASA and ESA mission archives"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Michael" },
]
keywords = ["spice", "naif", "kernels", "planetary-science", "metakernel", "esa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "duckdb>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
spice-kernel-db = "spice_kernel_db.cli:main"

[project.urls]
Homepage = "https://github.com/michaelaye/spice-kernel-db"
Repository = "https://github.com/michaelaye/spice-kernel-db"
Issues = "https://github.com/michaelaye/spice-kernel-db/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/spice_kernel_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
